--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "driver.js": "^1.3.6",
+    "exceljs": "^4.4.0",
     "firebase": "^12.3.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "3.5.20",
