--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^12.3.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "3.5.20",
