MARIA - Ya se actualiza el mapa con los eventos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     },
     "lib": ["esnext", "dom"]
   },
-  "include": ["src/**/*"],
+  "include": ["src", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "exclude": ["dist", "node_modules", ".quasar"]
 }
