--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@turf/turf": "^7.2.0",
     "axios": "^1.2.1",
     "driver.js": "^1.3.6",
     "exceljs": "^4.4.0",
