--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "allowJs": true,
+    "noEmit": true, // ← Agrega esto para evitar que TypeScript compile
     "baseUrl": ".",
     "paths": {
       "src/*": ["src/*"],
@@ -23,6 +25,6 @@
     },
     "lib": ["esnext", "dom"]
   },
-  "include": ["src", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/**/*.js"],
   "exclude": ["dist", "node_modules", ".quasar"]
 }
