--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^1.13.3",
+    "maplibre-gl": "^5.12.0",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "register-service-worker": "^1.7.2",
