--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "googleapis": "^169.0.0",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
